# cdk

./: .backportrc.json  .cargo-mutants.toml  .gitignore  .goosehints  .pre-commit-config.yaml  .typos.toml  AGENTS.md  BATCHED_MINT_REVIEW.md  BATCH_MINT_CODE_REVIEW.md  BOLT12_BATCH_MINTING_PLAN.md  BUILD-COMPLETE-STATUS.md  BUILD-STATUS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING-SPARK.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.arm  Dockerfile.hardened  Dockerfile.ldk-node  Dockerfile.ldk-node.arm  Dockerfile.static  FIX_BATCH_MINT_TESTS.md  LICENSE  LICENSE-APACHE  LICENSE.md  LINUX-BUILD-GUIDE.md  MELT_REFACTORING.md  MINT_RESTART_FEATURE.md  MPROCS_INTEGRATION.md  MPROCS_MODES.md  NEXT-AGENT-INSTRUCTIONS.md  NUTSHELL_MIGRATION_PLAN.md  Package.swift  README.md  REGTEST_GUIDE.md  (+47 more)
bindings/cashu-ffi/: .gitignore  Cargo.toml  build.rs  justfile  uniffi.toml
bindings/cashu-ffi/bindings-python/: .gitignore  MANIFEST.in  README.md  setup.py
bindings/cashu-ffi/src/: cashu.udl  error.rs  lib.rs
bindings/cashu-js/: .npmignore  Cargo.toml  LICENSE  justfile  package.json  tsconfig.json
bindings/cashu-js/examples/: amount.js
bindings/cashu-js/scripts/: build.sh  epilogue.js
bindings/cashu-js/src/: lib.rs
bindings/cashu-sdk-ffi/: Cargo.toml  build.rs  justfile  uniffi.toml
bindings/cashu-sdk-ffi/bindings-python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
bindings/cashu-sdk-ffi/src/: cashu_sdk.udl  client.rs  error.rs  lib.rs  mint.rs  wallet.rs
bindings/cashu-sdk-js/: Cargo.toml  justfile  package.json
bindings/cashu-sdk-js/examples/: wallet.js
bindings/cashu-sdk-js/scripts/: build.sh  epilogue.d.ts  epilogue.js
bindings/cashu-sdk-js/src/: client.rs  lib.rs  mint.rs  wallet.rs
bindings/cdk-js/: Cargo.toml  justfile  package.json  result  result-1
bindings/cdk-js/examples/: mint_token.js
bindings/cdk-js/src/: error.rs  lib.rs  wallet.rs
crates/cashu/: Cargo.toml  README.md
crates/cashu-sdk/: Cargo.toml
crates/cashu-sdk/src/: lib.rs  mint.rs  utils.rs  wallet.rs
crates/cashu/examples/: nut-28.rs  nut-ctf.rs  payment_request_encoding_benchmark.rs
crates/cashu/src/: amount.rs  dhke.rs  error.rs  lib.rs  mint.rs  mint_url.rs  quote_id.rs  secret.rs  serde_utils.rs  types.rs  url.rs  utils.rs  wallet.rs
crates/cdk-axum/: Cargo.toml  README.md
crates/cdk-axum/src/: auth.rs  bolt12_router.rs  custom_handlers.rs  custom_router.rs  lib.rs  metrics.rs  onchain_router.rs  router_handlers.rs  transparency.rs  witness.rs  ws.rs
crates/cdk-bark/: Cargo.toml
crates/cdk-bark/examples/: create_invoice.rs
crates/cdk-bark/src/: error.rs  lib.rs
crates/cdk-bdk/: Cargo.toml  README.md
crates/cdk-bdk/src/: error.rs  fee.rs  lib.rs  payjoin.rs  recovery.rs  storage.rs  sync.rs  types.rs  util.rs
crates/cdk-blink/: Cargo.toml
crates/cdk-blink/src/: error.rs  lib.rs
crates/cdk-cli/: Cargo.toml  README.md
crates/cdk-cli/src/: bip353.rs  main.rs  nostr_storage.rs  token_storage.rs  utils.rs
crates/cdk-cln/: Cargo.toml  README.md
crates/cdk-cln/src/: bolt12.rs  connection.rs  database.rs  error.rs  lib.rs  logging_helpers.rs  mod.rs
crates/cdk-common/: Cargo.toml  README.md
crates/cdk-common/benches/: transaction_id_benchmark.rs
crates/cdk-common/src/: amount.rs  common.rs  database.rs  error.rs  fees.rs  grpc.rs  lib.rs  lightning.rs  melt.rs  mint.rs  mint_quote.rs  nut23.rs  payjoin.rs  payment.rs  rate_limit.rs  signatory.rs  state.rs  stream.rs  subscription.rs  task.rs  timing.rs  wallet.rs  ws.rs
crates/cdk-database/: Cargo.toml
crates/cdk-database/src/: lib.rs
crates/cdk-enclavia/: Cargo.toml  README.md
crates/cdk-enclavia/src/: cli.rs  client.rs  error.rs  lib.rs  transport.rs
crates/cdk-exchange-rate/: Cargo.toml
crates/cdk-exchange-rate/src/: lib.rs  msat_converter.rs  oracle.rs  payment.rs  store.rs  types.rs
crates/cdk-exchange-rate/tests/: aggregator_tests.rs  payment_integration_tests.rs
crates/cdk-fake-wallet/: Cargo.toml  README.md
crates/cdk-fake-wallet/src/: bolt12.rs  database.rs  error.rs  lib.rs
crates/cdk-ffi/: Cargo.toml  IMPLEMENTATION.md  README.md  uniffi.toml
crates/cdk-ffi/.cargo/: config.toml
crates/cdk-ffi/examples/: generate_bindings.rs
crates/cdk-ffi/src/: bip321.rs  cdk_ffi.udl  database.rs  error.rs  lib.rs  logging.rs  multi_mint_wallet.rs  npubcash.rs  nwc.rs  postgres.rs  runtime.rs  sqlite.rs  supabase.rs  token.rs  types.rs  wallet.rs  wallet_repository.rs  wallet_trait.rs  wallet_traits.rs
crates/cdk-ffi/tests/: README.md  test_kvstore.py  test_live_async_onchain_melt.py  test_transactions.py
crates/cdk-ffi/web/: index.html
crates/cdk-greenlight/: Cargo.toml
crates/cdk-greenlight/src/: error.rs  lib.rs
crates/cdk-http-client/: Cargo.toml  README.md
crates/cdk-http-client/src/: client.rs  error.rs  lib.rs  request.rs  request_builder_ext.rs  response.rs  transport.rs
crates/cdk-http-client/tests/: integration.rs
crates/cdk-integration-tests/: Cargo.toml  run_integration_test.sh
crates/cdk-integration-tests/src/: cli.rs  direct_mint_connection.rs  init_auth_mint.rs  init_direct_mint.rs  init_fake_wallet.rs  init_mint.rs  init_pure_tests.rs  init_regtest.rs  jit.rs  lib.rs  main.rs  payjoin_regtest.rs  shared.rs  start_regtest_mints.rs  util.rs
crates/cdk-integration-tests/tests/: async_melt.rs  batch_mint.rs  bolt12.rs  cairo-cli.rs  fake_auth.rs  fake_wallet.rs  fees.rs  ffi_minting_integration.rs  happy_path_mint_wallet.rs  integration_tests_pure.rs  kvac_fake_wallet.rs  ldk_node.rs  migration_integration_tests.rs  mint.rs  multi_mint_wallet.rs  nut20_quote_lookup.rs  nutXX_quote_lookup.rs  nutshell_migration_fuzzer.rs  nwc_e2e.rs  (+22 more)
crates/cdk-ldk/: Cargo.toml
crates/cdk-ldk-node/: Cargo.toml  NETWORK_GUIDE.md  README.md
crates/cdk-ldk-server/: Cargo.toml  README.md
crates/cdk-lnbits/: Cargo.toml  README.md
crates/cdk-lnd/: Cargo.toml  README.md  build.rs
crates/cdk-log/: Cargo.toml
integration_test/: Cargo.toml
integration_test/src/: main.rs
(+1775 files in other folders)
