[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.6.20", features = ["ws"] }
bitcoin = { version = "0.32.2", features = ["base64", "serde", "rand", "rand-std"] }
bip39 = { version = "2.0", features = ["rand"] }
ciborium = { version = "0.2.2", default-features = false, features = ["std"] }
cbor-diag = "0.1.12"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
lightning-invoice = { version = "0.32.0", features = ["serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1" }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "macros", "sync"] }
tokio-util = { version = "0.7.11", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.3"
uuid = { version = "=1.12.1", features = ["v4", "serde"] }
utoipa = { version = "4", features = [
    "preserve_order",
    "preserve_path_order",
]}
serde_with = "3"

[workspace.metadata]
authors = ["CDK Developers"]
description = "Cashu Development Kit"
readme = "README.md"
repository = "https://github.com/cashubtc/cdk"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash", "cashu"]

[profile.ci]
inherits = "dev"
incremental = false
lto = "off"

[workspace.metadata.crane]
name = "cdk-workspace"
