[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
version = "0.8.1"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8.1", features = ["ws"] }
bitcoin = { version = "0.32.2", features = ["base64", "serde", "rand", "rand-std"] }
bip39 = { version = "2.0", features = ["rand"] }
jsonwebtoken = "9.2.0"
cashu = { path = "./crates/cashu", version = "=0.8.1" }
cdk = { path = "./crates/cdk", default-features = false, version = "=0.8.1" }
cdk-common = { path = "./crates/cdk-common", default-features = false, version = "=0.8.1" }
cdk-axum = { path = "./crates/cdk-axum", default-features = false, version = "=0.8.1" }
cdk-cln = { path = "./crates/cdk-cln", version = "=0.8.1" }
cdk-lnbits = { path = "./crates/cdk-lnbits", version = "=0.8.1" }
cdk-lnd = { path = "./crates/cdk-lnd", version = "=0.8.1" }
cdk-fake-wallet = { path = "./crates/cdk-fake-wallet", version = "=0.8.1" }
cdk-payment-processor = { path = "./crates/cdk-payment-processor", default-features = true, version = "=0.8.1" }
cdk-mint-rpc = { path = "./crates/cdk-mint-rpc", version = "=0.8.1" }
cdk-redb = { path = "./crates/cdk-redb", default-features = true, version = "=0.8.1" }
cdk-sqlite = { path = "./crates/cdk-sqlite", default-features = true, version = "=0.8.1" }
clap = { version = "4.5.31", features = ["derive"] }
ciborium = { version = "0.2.2", default-features = false, features = ["std"] }
cbor-diag = "0.1.12"
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
lightning-invoice = { version = "0.32.0", features = ["serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1" }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "test-util"] }
tokio-util = { version = "0.7.11", default-features = false }
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full", "cors", "trace"] }
tokio-tungstenite = { version = "0.26.0", default-features = false }
tokio-stream = "0.1.15"
tracing = { version = "0.1", default-features = false, features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.3"
uuid = { version = "=1.12.1", features = ["v4", "serde"] }
utoipa = { version = "5.3.1", features = [
    "preserve_order",
    "preserve_path_order",
]}
serde_with = "3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
    "socks",
    "zstd",
    "brotli",
    "gzip",
    "deflate",
]}
once_cell = "1.20.2"
instant = { version = "0.1", default-features = false }
rand = "0.8.5"
regex = "1"
home = "0.5.5"
tonic = { version = "0.12.3", features = [
    "channel",
    "tls",
    "tls-webpki-roots",
] }
prost = "0.13.1"
tonic-build = "0.12"
strum = "0.27.1"
strum_macros = "0.27.1"



[workspace.metadata]
authors = ["CDK Developers"]
description = "Cashu Development Kit"
readme = "README.md"
repository = "https://github.com/cashubtc/cdk"
license-file = "LICENSE"
keywords = ["bitcoin", "e-cash", "cashu"]

[profile.ci]
inherits = "dev"
incremental = false
lto = "off"

[workspace.metadata.crane]
name = "cdk-workspace"
