[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
cashu-crab = {path = ".."}
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"
lightning-invoice = { version = "0.22.0", features=["serde"] }
serde_json = "1.0.96"
