[package]
name = "cashu-js"
version = "0.1.0"
edition = "2021"
description = "Cashu rust implementation, for JavaScript"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
publish = false
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cashu = { path = "../../crates/cashu"}
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
serde_json.workspace = true
serde.workspace = true
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1"



[package.metadata.wasm-pack.profile.release]
wasm-opt = true
