[package]
name = "cashu-sdk-ffi"
version = "0.1.0"
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
name = "cashu_sdk_ffi"
crate-type = ["cdylib", "staticlib"]


[dependencies]
cashu-ffi = { path = "../cashu-ffi" }
cashu-sdk = { path = "../../crates/cashu-sdk", default-features = false, features = ["wallet", "mint", "all-nuts"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uniffi = { workspace = true }
futures = { version= "0.3.29", feature = "executor" }
once_cell = { version = "1.17" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

