[package]
name = "cashu-sdk-js"
version = "0.1.0"
authors = ["thesimplekid <tsk@thesimplekid.com>"]
edition = "2021"
publish = false
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cashu-sdk = { path = "../../crates/cashu-sdk", features = ["all-nuts", "gloo"] }
cashu-js = { path = "../cashu-js" }
wasm-bindgen = "0.2.84"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
serde_json.workspace = true
serde.workspace = true
wasm-bindgen-futures = "0.4.37"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
