[package]
name = "cdk-js"
version = "0.1.0"
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cashu Development Kit JS Bindings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cdk = { workspace = true, features = ["wallet"] }
cdk-rexie = { workspace = true, features = ["wallet"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
serde.workspace = true
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.41"
web-sys.workspace = true
