[package]
name = "cdk-js"
version = "0.4.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version = "1.63.0" # MSRV
description = "Cashu Development Kit JS Bindings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cdk = { path = "../../crates/cdk", features = ["wallet"] }
cdk-rexie = { path = "../../crates/cdk-rexie", features = ["wallet"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
serde_json = "1"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1", default-features = false, features = ["derive"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.41"
web-sys =  { version = "0.3.69", default-features = false, features = ["console"] }
