[package]
name = "cashu-sdk"
version = "0.1.0"
edition = "2021"
authors = ["thesimplekid"]
homepage.workspace = true
repository.workspace = true
rust-version = "1.67.0" # MSRV
license.workspace = true


[features]
default = ["mint", "wallet"]
mint = ["cashu/mint"]
blocking = ["dep:once_cell"]
wallet = ["cashu/wallet", "dep:minreq", "dep:once_cell"]


# Fix: Should be minreq or gloo
# [target.'cfg(not(target_arch = "wasm32"))'.features]
# wallet = ["cashu/wallet", "minreq", "once_cell"]

# [target.'cfg(target_arch = "wasm32")'.features]
# wallet = ["cashu/wallet", "gloo", "once_cell"]

[dependencies]
cashu = { path = "../cashu" }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
once_cell = { version = "1.17", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros", "sync"] }
minreq = { version = "2.7.0", optional = true, features = ["json-using-serde", "https"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
gloo = { version = "0.10.0", features = ["net"]}



