[package]
name = "cashu-sdk"
version = "0.1.0"
edition = "2021"
authors = ["thesimplekid"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true # MSRV
license.workspace = true


[features]
default = ["mint", "wallet", "all-nuts", "redb"]
mint = ["cashu/mint"]
wallet = ["cashu/wallet", "dep:minreq"]
gloo = ["dep:gloo"]
all-nuts = ["nut07", "nut08", "nut09", "nut10", "nut11", "nut12", "nut13"]
nut07 = ["cashu/nut07"]
nut08 = ["cashu/nut08"]
nut09 = ["cashu/nut07", "cashu/nut09"]
nut10 = ["cashu/nut10"]
nut11 = ["cashu/nut11"]
nut12 = ["cashu/nut12"]
nut13 = ["cashu/nut13"]
redb = ["dep:redb"]


[dependencies]
bip39 = "2.0.0"
cashu = { path = "../cashu" }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.74"
gloo = { version = "0.11.0", optional = true, features = ["net"] }
http = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros", "sync"] }
minreq = { version = "2.7.0", optional = true, features = ["json-using-serde", "https"] }
redb = { version = "2.0.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }



