[package]
name = "cdk-axum"
version = "0.7.1"
edition.workspace = true
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version = "1.75.0"                            # MSRV
description = "Cashu CDK axum webserver"

[features]
redis = ["dep:redis"]
swagger = ["cdk/swagger", "dep:utoipa"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { version = "0.6.20", features = ["ws"] }
cdk = { path = "../cdk", version = "0.7.1", default-features = false, features = [
    "mint",
] }
tokio.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = [
    "preserve_order", 
    "preserve_path_order"
], optional = true }
futures.workspace = true
moka = { version = "0.11.1", features = ["future"] }
serde_json.workspace = true
paste = "1.0.15"
serde.workspace = true
uuid.workspace = true
sha2 = "0.10.8"
redis = { version = "0.23.3", features = [
    "tokio-rustls-comp",
], optional = true }

