[package]
name = "cdk-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true                            # MSRV
description = "Cashu CDK axum webserver"
readme = "README.md"


[features]
default = ["auth"]
redis = ["dep:redis"]
swagger = ["cdk/swagger", "dep:utoipa"]
auth = ["cdk/auth"]
prometheus = ["dep:cdk-prometheus"]
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
cdk = { workspace = true, features = [
    "mint",
]}
tokio.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
futures.workspace = true
cdk-prometheus = { workspace = true , optional = true}
moka = { version = "0.12.10", features = ["future"] }
serde_json.workspace = true
paste = "1.0.15"
serde.workspace = true
uuid.workspace = true
sha2 = "0.10.8"
redis = { version = "0.31.0", features = [
    "tokio-rustls-comp",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
