[package]
name = "cdk-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true                            # MSRV
description = "Cashu CDK axum webserver"
readme = "README.md"


[features]
redis = ["dep:redis"]
prometheus = ["dep:cdk-prometheus"]
info-page = ["dep:maud"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
cdk = { workspace = true, features = [
    "mint",
]}
cdk-http-client = { workspace = true, features = ["bitreq"] }
cdk-tlog.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
cdk-prometheus = { workspace = true , optional = true}
moka = { version = "0.12.10", features = ["future"] }
serde_json.workspace = true
paste.workspace = true
serde.workspace = true
uuid.workspace = true
sha2 = "0.10.8"
maud = { workspace = true, optional = true }
redis = { version = "0.31.0", default-features = false, features = [
    "tokio-rustls-comp",
    "cluster-async",
    "connection-manager",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
cdk-fake-wallet = { workspace = true }
cdk-sqlite = { workspace = true, features = ["mint"] }
cdk-signatory = { workspace = true }
bip39 = { workspace = true }

[lints]
workspace = true
