[package]
name = "cdk-bdk"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK onchain backend with bdk"
readme = "README.md"

[dependencies]
async-trait.workspace = true
bdk_wallet = { version = "3.0.0", features = ["rusqlite", "keys-bip39"] }
bdk_bitcoind_rpc = "0.21.0"
bdk_esplora = { version = "0.22.1", features = ["async-https-rustls", "tokio"] }
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true 
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
cdk-sqlite = { workspace = true }

