[package]
name = "cdk-cli"
version.workspace = true
authors = ["CDK Developers"]
description = "Cashu cli wallet built on CDK"
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = []
sqlcipher = ["cdk-sqlite/sqlcipher"]
# MSRV is not tracked with redb enabled
redb = ["dep:cdk-redb"]
tor = ["cdk/tor"]

[dependencies]
anyhow.workspace = true
bip39.workspace = true
bitcoin.workspace = true
cdk = { workspace = true, default-features = false, features = ["wallet", "auth", "nostr", "bip353"]}
cdk-redb = { workspace = true, features = ["wallet"], optional = true }
cdk-sqlite = { workspace = true, features = ["wallet"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
home.workspace = true
nostr-sdk = { workspace = true }
reqwest.workspace = true
url.workspace = true
serde_with.workspace = true
lightning.workspace = true
