[package]
name = "cdk-cln"
version = "0.7.1"
edition = "2021"
authors = ["CDK Developers"]
license = "MIT"
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version = "1.75.0" # MSRV
description = "CDK ln backend for cln"

[dependencies]
async-trait.workspace = true
bitcoin.workspace = true
cdk = { path = "../cdk", version = "0.7.2" }
cln-rpc = "0.3.0"
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
